--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
@@ -99,26 +99,26 @@ form {
     display: flex;
     flex-direction: row;
     font-family: Source Sans Pro, sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 18px;
-    color: #3c7eea;
-    cursor: pointer;
-    position: relative;
-    outline: none;
+    // font-style: normal;
+    // font-weight: 600;
+    // font-size: 14px;
+    // line-height: 18px;
+    // color: #3c7eea;
+    // cursor: pointer;
+    // position: relative;
+    // outline: none;
 
-    &:hover {
-      color: #5695fd;
-    }
+    // &:hover {
+    //   color: #5695fd;
+    // }
 
-    &:active {
-      color: #1666ea;
-    }
+    // &:active {
+    //   color: #1666ea;
+    // }
   }
   &.secondary-optins {
-    background: #FFFFFF;
-    border-top: 1px solid #DCE0E6;
+    background: #ffffff;
+    border-top: 1px solid #dce0e6;
     padding-bottom: 24px;
     padding-left: 37px;
   }
@@ -228,8 +228,6 @@ form {
   & > div {
     width: 100%;
   }
-
-
 
   .line {
     display: flex;
@@ -348,8 +346,6 @@ form {
         align-items: center;
       }
     }
-
-
 
     .option-title {
       background: #f4f7fc;
@@ -502,7 +498,7 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
           box-shadow: none;
           outline: none;
           &:before {
-            content: '';
+            content: "";
             position: absolute;
             width: 100%;
             height: 100%;
@@ -525,7 +521,6 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
           margin: 0;
           margin-top: -2px;
           padding: 0;
-
         }
       }
       .options {
@@ -540,7 +535,7 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
           font-weight: normal;
           font-size: 16px;
           line-height: 20px;
-          color: #AAB2C0;
+          color: #aab2c0;
         }
         & > div {
           width: 95px;
@@ -567,7 +562,6 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
               font-size: 16px;
               line-height: 21px;
               color: #707683;
-
             }
             .money {
               font-family: Source Sans Pro, sans-serif;
@@ -581,22 +575,22 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
           }
         }
       }
-      .all-types{
+      .all-types {
         width: 100%;
-          background: #F4F7FC;
-          overflow: hidden;
-          &.open {
-            height: 230px;
-            transition: height 0.5s;
-          }
-          &.closed {
-            height: 0;
-            transition: height 1s;
-          }
+        background: #f4f7fc;
+        overflow: hidden;
+        &.open {
+          height: 230px;
+          transition: height 0.5s;
+        }
+        &.closed {
+          height: 0;
+          transition: height 1s;
+        }
 
-        > div{
+        > div {
           width: 100%;
-          background: #F4F7FC;
+          background: #f4f7fc;
           display: flex;
           flex-direction: column;
           & > div {
@@ -615,7 +609,7 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
               font-size: 16px;
               line-height: 20px;
               text-align: center;
-              color: #323C47;
+              color: #323c47;
               padding-left: 30px;
             }
             &:first-of-type {
@@ -627,7 +621,6 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
           }
         }
       }
-      
     }
     // --------deffault extra field ------------
 
@@ -637,8 +630,8 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
       justify-content: space-between;
       align-items: center;
       min-height: 73px;
-      
-      border-top: 1px solid #DCE0E6;
+
+      border-top: 1px solid #dce0e6;
 
       .option-wrap {
         display: flex;
@@ -655,7 +648,7 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
         box-shadow: none;
         outline: none;
         &:before {
-          content: '';
+          content: "";
           position: absolute;
           width: 100%;
           height: 100%;
@@ -669,6 +662,14 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
           transform: rotate(180deg);
         }
       }
+      &.extra-option {
+        border: none;
+        height: 34px;
+        min-height: 34px;
+        .option-wrap {
+          justify-content: flex-end;
+        }
+      }
     }
     .checkbox {
       display: flex;
@@ -678,7 +679,6 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
         margin: 0;
         margin-top: -2px;
         padding: 0;
-
       }
     }
     .options {
@@ -687,14 +687,14 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
       align-items: center;
       // justify-content: space-between;
       min-width: 310px;
-      
+
       span {
         font-family: Source Sans Pro, sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 16px;
         line-height: 20px;
-        color: #AAB2C0;
+        color: #aab2c0;
       }
       & > div {
         width: 95px;
@@ -721,7 +721,6 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
             font-size: 16px;
             line-height: 21px;
             color: #707683;
-
           }
           .money {
             font-family: Source Sans Pro, sans-serif;
@@ -743,18 +742,18 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
     }
     // ---------- extra secondary-options creations ---------- //
     .secondary-extra-options {
-      
       display: flex;
       flex-direction: column;
-
+      // border-top: 1px solid #DCE0E6;
       &-item {
         display: flex;
         flex-direction: column;
-        padding: 0 24px;
-        
+
+        border-top: 1px solid #dce0e6;
       }
       .option-creation {
-        &>div {
+        padding: 20px 24px;
+        & > div {
           display: flex;
           flex-direction: row;
           justify-content: space-between;
@@ -767,19 +766,18 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
             font-size: 16px;
             line-height: 20px;
             text-align: left;
-            color: #323C47;
+            color: #323c47;
             margin: 0;
             & + div {
               width: 76%;
-              border: 1px solid #DCE0E6;
+              border: 1px solid #dce0e6;
               box-sizing: border-box;
               border-radius: 2px;
-              
             }
           }
           &.extra-option-title {
             margin-bottom: 36px;
-            &>div {
+            & > div {
               padding: 8px 12px;
               input {
                 font-family: Source Sans Pro, sans-serif;
@@ -787,7 +785,7 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
                 font-weight: 600;
                 font-size: 16px;
                 line-height: 20px;
-                color: #323C47;
+                color: #323c47;
                 width: 100%;
                 padding: 0;
                 margin: 0;
@@ -800,15 +798,22 @@ mat-select::ng-deep .mat-select-arrow-wrapper {
           &.extra-option-description {
             margin-bottom: 18px;
             align-items: flex-start;
-            &>div {
+            & > div {
               height: 93px;
-              padding: 8px 38px 0 15px;
+              padding: 8px 38px 8px 15px;
+              textarea {
+                resize: none;
+                margin: 0;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+                outline: none;
+                border: none;
+              }
             }
           }
         }
-        
       }
-
     }
   }
 }
