--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,7 @@ body {
   background: #F1F2F4;
 }
 
-// -------- inputn classic
+// -------- inputn checbox classic
 input[type=checkbox].tgl-classic+label {
   display: block;
   margin: 0.2em;
