--- a/src/app/service-page/components/ngx-gallery/ngx-gallery.component.html
+++ b/src/app/service-page/components/ngx-gallery/ngx-gallery.component.html
@@ -1,4 +1,4 @@
 <div class="gallery">
   <ngx-gallery  [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
-  <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + galleryImages">
+  <!-- <img [src]="'https://www.thecubetest.site/Backend/storage/app/' + galleryImages"> -->
 </div>
